add slider functionality

--- a/index.html
+++ b/index.html
@@ -151,8 +151,17 @@
     <footer>
       <div class="col-sm-4">
         <p>Copyrights 2018 | All rights reserved Coders Lab</p>
+        <div class="bottomright" id="go-up-btn">
+            <button type="button" class="btn btn-lg">
+                <span class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+            </button>
+
+
+          <!-- <span class="circle glyphicon glyphicon-triangle-top"></span> -->
+        </div>
       </div>
     </footer>
+
     <script src="js/app.js"></script>
   </body>
 </html>
